--- a/tacocloud-messaging-jms/src/main/resources/application.yml
+++ b/tacocloud-messaging-jms/src/main/resources/application.yml
@@ -16,11 +16,11 @@ spring:
 # None of these properties will actually work as configured for this profile.
 # But it is left here as an example of configuring for a production profile
 # that will override the local configuration in the default profile.
-spring:
-  profiles: production
-    
-  artemis:
-    host: artemis.tacocloud.com
-    port: 61617
-    user: tacoweb
-    password: l3tm31n
+#spring:
+#  profiles: production
+#    
+#  artemis:
+#    host: artemis.tacocloud.com
+#    port: 61617
+#    user: tacoweb
+#    password: l3tm31n
