--- a/tacocloud-messaging-kafka/src/main/resources/application.yml
+++ b/tacocloud-messaging-kafka/src/main/resources/application.yml
@@ -2,7 +2,8 @@
 # set here as an example of setting the Kafka properties.
 spring:
   kafka:
-    bootstrap-servers: 15.165.75.166:9092
+    bootstrap-servers: 43.200.164.243:9092
+#    bootstrap-servers: 15.165.75.166:9092
     template:
       default-topic: tacocloud_orders
     producer:
