--- a/tacos/src/main/resources/application.yml
+++ b/tacos/src/main/resources/application.yml
@@ -11,42 +11,17 @@ taco:
   discount:
     codes:
       abcdef: 10
-      
-#logging:
-#  level:
-#    org.springframework.data.rest: debug
-
+  
 spring:
   data:
     rest:
       base-path: /api
-      
-  jms:
-    template:
-      receive-timeout: 2
-  artemis:
-    host: localhost
-    port: 61616
-    user: tacoweb
-    password: letm31n
-    embedded:
-      enabled: false
-
-#---
-#spring:
-#  profiles: prod
-  
-#  datasource:
-#    url: jdbc:mysql://localhost:3306/tacocloud
-#    username: root
-#    password: 1234
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: "jdbc:mysql://localhost:3306/tacocloud?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&tinyInt1isBit=false"
     username: root
     password: 1234    
-    
     hikari:
       auto-commit: false
       connection-test-query: SELECT 1
@@ -64,13 +39,39 @@ spring:
         #physical_naming_strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
     open-in-view: false
     show-sql: true
+        
+
+---
+spring:
+  config:
+    activate:
+      on-profile: kafka-producer
+    
+  kafka:
+    bootstrap-servers: 43.200.164.243:9092
+#    bootstrap-servers: 15.165.75.166:9092
+    template:
+      default-topic: tacocloud_orders
+    producer:
+      keySerializer: org.springframework.kafka.support.serializer.JsonSerializer
+      valueSerializer: org.springframework.kafka.support.serializer.JsonSerializer
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   
-
-
-
-
-
-
 
 
 
